# trade-bot-2026-06-07

./: .gitignore  CLAUDE.md  README.md  account_sim.py  bleed_lab.py  evaluate.py  exp03.py  exp04.py  exp05.py  exp06.py  exp07.py  exp12_worst_trades.py  exp13_exit_improve.py  exp14.py  exp14_risk_adjusted.py  exp15.py  exp17.py  exp18.py  exp19.py  exp19c.py  exp20.py  exp21_final.py  exp21_tsmom_bleed.py  exp21c_gated_overlay.py  exp22_altpremia_bleed.py  exp22b_tail_check.py  exp_breakout_diag.py  exp_breakout_hedge.py  exp_vol_adversarial.py  exp_vol_breakout.py  exp_vol_breakout_results.csv  extract_trades.py  filterlab.py  leaderboard.py  mm_composite_verify.py  mm_concurrency_budget.py  mm_cppi_throttle.py  mm_kelly.py  mm_lab.py  mm_maxpos.py  (+11 more)
fxlab/: __init__.py  backtest.py  carry.py  config.py  data.py  evaluate.py  trades.py  universe.py  yearly.py
reports/: 00_INDEX.md  01_baseline_landscape.md  02_refinement_and_feasibility.md  03_adaptive_diversified_meanrev.md  04_champion_multiwindow_portfolio.md  05_universe_robustness_and_iron_triangle.md  06_forward_test_and_live_readiness.md  07_production_spec.md  08_entry_filter_efficiency_ratio.md  09_money_management_dd20.md  10_complement_bleedwindow.md  11_2x_attempt_structures.md  11_trend_following_gold.md  12_nextbar_m5_edge.md  12_trendfollowing_sweep.md  13_short_tf_and_debias_review.md  14_zpower_exponent_recalibration.md  15_profit_anatomy.md  16_lever_verification.md  17_trading_chaos.md  18_entry_delay_phase_harvest.md  19_cagr20_challenge.md  20_algorithm_improvement.md  21_loss_anatomy_d1.md  (+10 more)
(+416 files in other folders)
